# buyeuropean-desktop

./: .gitignore  CHANGELOG  MANIFEST.in  README.md  buyeuropean.spec  noxfile.py  pyproject.toml  response.json  test_ui.py
.github/workflows/: github-release.yml  github-release.yml.disabled
buyeuropean-api-outputs/: 2.0-response.json  feedback-request-success.json  reponse-feedback-thumbs-down.json  reponse-feedback.json
icons/: buyeuropean.icns
scripts/: prepare_for_pyinstaller.py
src/buyeuropean/: __init__.py  __main__.py  api.py  platform.py
src/buyeuropean/ui/: __init__.py
src/buyeuropean/ui/gtk/: __init__.py  app.py
src/buyeuropean/ui/qt/: __init__.py  app.py
tests/: test_api.py
